# lang

./: .clangd  .gitignore  CMakeLists.txt  TODO.md  build.zig  main.cpp  test.mlir
.cache/clangd/index/: ast.hpp.47276B78FBF17771.idx  ast.hpp.DC1598836E517471.idx  compiler.hpp.1FD3549FB37B6917.idx  compiler.hpp.4E245BAF51417DA2.idx  lexer.hpp.55FA17A749386696.idx  lexer.hpp.8DAFE1DD739356AB.idx  main.cpp.FA1A93075AFBB882.idx  parser.cpp.DD718D0AA25A4D9F.idx  parser.hpp.E22CD2A9782C26BD.idx  render.cpp.81BFF684DB2B435F.idx  test_lexer.cpp.A5A0C0E96F0C53B6.idx  test_parser.cpp.E9E65FB2FF4D7FF1.idx
dialect/: CMakeLists.txt  LangDialect.cpp  LangOps.cpp
examples/: aliasing.lang  arrays, slices.lang  basic_comptime.lang  block expressions.lang  c-like enums.lang  casting.lang  comptime_expr.lang  comptime_trait.lang  declare first.lang  enums.lang  expr.lang  for each mut.lang  for each.lang  for in.lang  formatter.lang  functions.lang  generic_struct.lang  hello.lang  higher order functions.lang  if else.lang  if_tests.lang  import.lang  literals 2.lang  literals.lang  loops.lang  match destructuring.lang  match enums.lang  match struct pattern.lang  match.lang  method 2.lang  methods.lang  mlir_types.lang  multiple_trait_constraint.lang  mutability.lang  nested_comptime.lang  no return, hof.lang  overloading.lang  primitives.lang  returning from loops.lang  scope.lang  (+7 more)
include/: Dialect.h  LangGen.h  MLIRGen.h  analyzer.hpp  ast.hpp  compiler.hpp  comptime_eval_pass.hpp  data_structures.hpp  json_dumper.hpp  lexer.hpp  parser.hpp  passes.h
include/dialect/: CMakeLists.txt  LangDialect.h  LangDialect.td  LangOps.h  LangOps.td
src/: LangGen.cpp  MLIRGen.cpp  analyzer.cpp  ast.cpp  ast.hpp  compiler.cpp  compiler.hpp  comptime_eval_pass.cpp  data_structures.cpp  json_dumper.cpp  lexer.cpp  lexer.hpp  literal_cast_pass.cpp  lower_to_affine.cpp  lower_to_llvm.cpp  parser.cpp
src/dialect/: MyDialect.cpp.inc  MyDialect.h.inc
src/ops/: MyOps.cpp.inc  MyOps.h.inc
src/tablegen/: LangDialect.td
src/tablegen/dialect/: MyDialect.td
src/tablegen/ops/: MyOps.td
std/: mem.lang
std/builtin/: array.lang  bool.lang  float.lang  int.lang  slice.lang  tensor.lang
std/std/: mem.lang
tests/: test_analyzer.cpp  test_behaviour.cpp  test_lexer.cpp  test_mangler.cpp  test_parser.cpp
